--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,10 @@
 browser=chrome
-amazonUrl=https://amazon.com
+amazonUrl=https://www.amazon.com
+
 demoqa=https://demoqa.com/browser-windows
+
+kelime1=sql
+kelime2=samsung
+kelime3=nokia
+
+ninjaUrl=http://tutorialsninja.com/demo/index.php?route=common/home
