--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,14 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <!--    <properties>-->
+    <!--        <maven.compiler.source>15</maven.compiler.source>-->
+    <!--        <maven.compiler.target>15</maven.compiler.target>-->
+    <!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+    <!--    </properties>-->
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -45,4 +49,24 @@
         </dependency>
 
     </dependencies>
+    <build>
+    <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M1</version>
+        <configuration>
+            <parallel>methods</parallel>
+            <threadCount>2</threadCount> <!--aynı anda 2 browser çalıştırılacağı anlamına gelir. -->
+            <perCoreThreadCount>false</perCoreThreadCount> <!-- CPU ile alakalı -->
+            <forkCount>2</forkCount> <!-- iki ayrı JVM işlemi başlatır ve her biri farklı bir test paketi çalıştırır. Bu, testlerin daha hızlı tamamlanmasını sağlar. Ancak, bu ayarın artırılması, sistemin kaynaklarını tüketebilir ve performans sorunlarına neden olabilir. -->
+            <reuseForks>true</reuseForks> <!--Maven önceki testlerde oluşturulmuş JVM işlemlerini yeniden kullanır -->
+            <includes>
+                <include>**/runners/*Runner*.java</include>
+            </includes>
+            <testFailureIgnore>true</testFailureIgnore> <!--testin başarısız olmasına rağmen diğer testlere devam eder ve sonunda tüm testleri çalıştırır. -->
+        </configuration>
+    </plugin>
+    </plugins>
+    </build>
 </project>
